create payment system

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+YII_DEBUG=true
+YII_ENV=dev
+
 DB_DSN=mysql:host=localhost;dbname=yii2basic
 DB_USER=root
-DB_PASSWORD=
+DB_PASS=
+
+ALLOWED_IPS=127.0.0.1,::1
+
+JWT_KEY=secret
+JWT_ALG=HS256
+
+PAYMENT_URL=http://localhost/payment/accept
