--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
 version: '2'
 services:
-  php:
-    image: yiisoftware/yii2-php:7.1-apache
-    volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+  web:
+    image: nginx:latest
     ports:
-      - '8000:80'
+      - "80:80"
+    volumes:
+      - ./:/var/www
+      - ./docker/web/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+  php:
+    image: golovanovya/php-fpm:latest
+    volumes:
+      - ./:/var/www
+    working_dir:
+      /var/www
