--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
+#enable debug mode
 YII_DEBUG=true
+#set yii environment
 YII_ENV=dev
 
+#connection config
 DB_DSN=mysql:host=localhost;dbname=yii2basic
 DB_USER=root
 DB_PASS=
 
+#debug ips
 ALLOWED_IPS=127.0.0.1,::1
 
+#key for server/client payment
 JWT_KEY=secret
+#algorithm for client JWT
 JWT_ALG=HS256
 
+#payment server address
 PAYMENT_URL=http://localhost/payment/accept
